# filip

./: .gitignore  LICENSE  README.md  docker-bake.hcl  filip.sh
.github/workflows/: develop.workflow.yml  prerelease.workflow.yml  release.workflow.yml
docker/: Dockerfile
docker/scripts/: build.sh  validate.sh
entrypoint/: Cargo.toml
entrypoint/src/: docker.rs  main.rs  signal.rs
entrypoint/src/docker/: container.rs  network.rs  volume.rs
entrypoint/src/docker/container/: config.rs
entrypoint/src/docker/network/: ifaddr.rs
