[package]
name = "flecs-entrypoint"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
debug = false
incremental = false

[dependencies]
async-signal = "0.2.13"
bollard = "0.20.0"
futures-util = "0.3.31"
libc = "0.2.180"
procfs = "0.18.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "macros", "time", "sync", "process"] }
