[package]
name = "flecs-entrypoint"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
debug = false
incremental = false

[dependencies]
async-signal = "0.2.13"
bollard = "0.20.0"
futures-util = "0.3.31"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "macros", "time", "sync", "process"] }
net-spider = { git = "https://codeberg.org/flecs-tech/net-spider.git", rev = "5112346023b4f67bbce0f75596be6dc147148d6e" }
ipnet = "2.11.0"